--- a/Athena/static/Athena/css/cource_style.css
+++ b/Athena/static/Athena/css/cource_style.css
@@ -52,34 +52,40 @@
     background-color: #070708;
 }
 
+.course-view {
+    display: flex;
+    flex-direction: column;
+}
+
 .course-card {
-    flex: 0 0 auto;
     overflow: hidden;
     margin-right: 60px;
     width: 300px;
     height: 200px;
     background-color: #ffffff;
-    padding: 20px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     border-radius: 24px;
     border-width: 0;
 }
 
 .course-card .course_logo {
+    height: 200px;
     object-fit: cover;
-    width: 60px;
-    height: 60px;
-    margin-bottom: 4px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
 }
 
-.course-card h3 {
+.course-view h3 {
     padding: 4px 0;
+    margin-top: 8px;
+    margin-left: 8px;
+    font-size: large;
+    font-weight: normal;
 }
 
-.course-card p {
-    padding: 4px 0;
+.course-view p {
+    padding: 2px 0;
+    margin-left: 8px;
+    font-size: small;
+    font-weight: lighter;
 }
 
 .secondary-btn {
@@ -115,7 +121,7 @@
 .banner-container {
   height: 260px;
   background-color: #070708;
-  margin: 0 60px;
+  margin: 0 50px;
   border-radius: 24px;
   border: none;
 }
